# rust-workbench

./: .gitignore  Cargo.toml  README.md  rustlings.sh
.github/workflows/: rust.yml
adder/: .gitignore
adder/src/: lib.rs
adder/tests/common/: mod.rs
adventofcode/: README.md
adventofcode/2020/day1/: Cargo.toml
adventofcode/2020/day1/src/: main.rs
adventofcode/2021/: .gitignore
adventofcode/2021/src/: day01.rs  lib.rs
adventofcode/2022/day13/: Cargo.toml  README.md
adventofcode/2022/day13/src/: lib.rs  main.rs
adventofcode/2022/day14/: Cargo.toml
adventofcode/2022/day14/src/: index.html  lib.rs  main.rs
emoji/: Cargo.toml  README.md
emoji/src/: main.rs
grrs/: Cargo.toml  README.md  build.rs
grrs/src/: lib.rs  main.rs
grrs/tests/: cli.rs
hello/: README.md
hello/src/: lib.rs  main.rs
pp2a-asg2/: .env  .gitignore  Cargo.toml  Makefile  README.md
pp2a-asg2/benches/: main_bench.rs
pp2a-asg2/src/: binary.rs  lib.rs  linear.rs  linked.rs  ord_array_binary.rs  ord_array_linear.rs  tree.rs  ubst.rs
pp2a-asg2/tests/: unit.rs
src/: main.rs
watchd/: Cargo.toml  README.md
watchd/src/: main.rs
web-template-rs/: Cargo.toml  README.md
web-template-rs/src/: main.rs
