[workspace]

members = [
  "adder",
  "adventofcode/2020/day1",
  "adventofcode/2021",
  "adventofcode/2022/day13",
  "adventofcode/2022/day14",
  "emoji",
  "grrs",
  "hello",
  "pp2a-asg2",
  "watchd",
  "web-template-rs",
]

[package]
name = "rust-workbench"
version = "0.1.0"
authors = ["James Lucktaylor <jlucktay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
