[package]
authors = ["James Lucktaylor <jlucktay+crates.io@gmail.com>"]
categories = ["command-line-utilities"]
description = "A tool to search files"
documentation = "https://github.com/jlucktay/rust-workbench/blob/main/grrs/README.md"
edition = "2021"
homepage = "https://github.com/jlucktay/rust-workbench/grrs"
keywords = ["cli", "search", "demo"]
license = "Unlicense"
name = "jlucktay-grrs"
readme = "README.md"
repository = "https://github.com/jlucktay/rust-workbench"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap = {version = "3.0", features = ["derive"]}
clap_mangen = "0.1.10"

[dependencies]
clap = {version = "3.0", features = ["derive"]}
env_logger = "0.9.0"
log = "0.4.17"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"
