[package]
name = "pp2a-asg2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary_search_tree = "0.2.2"

[dev-dependencies.criterion]
version = "0.3.6"
features = ["html_reports"]

[[bench]]
name = "main_bench"
harness = false
